style.css
.d-none {
    display: none;
}

.no-scroll {
    overflow: hidden;
}

body {
    min-height: 100dvh;
    width: 100%;

    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    gap: 20px;

    background-image: url("./assets/img/5_background/background_website_2.png");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}

header {
    width: 100%;
    height: 80px;
    display: flex;
    align-items: center;
    justify-content: center;

    h1 {
        font-size: 64px;
        letter-spacing: 3px;
        text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
    }
}

main {
    width: 100%;
    height: fit-content;
    display: flex;
    justify-content: center;
    align-items: center;

    .rotate-message {
        display: none;
        width: 200px;
        height: 70px;
        border-radius: 10px;
        background-color: rgba(221, 232, 235);
        font-family: "Courier New", Courier, monospace;
        font-size: 16px;
    }

    .game-container {
        width: 720px;
        height: 480px;

        .mobile-impressum {
            position: absolute;
            top: 15px;
            right: 10px;
            z-index: 100;
            width: 25px;
            height: 25px;
            border-radius: 50%;
            background-color: rgba(221, 232, 235);
            justify-content: center;
            align-items: center;
            display: none;

            a p {
                font-size: 20px;
                font-family: "Inter";
                font-weight: 800;
            }
        }

        .navigation {
            position: absolute;
            top: 15px;
            z-index: 30;

            width: 100%;
            height: fit-content;
            _background-color: blue;

            .content {
                width: 100%;
                height: 100%;
                display: flex;
                flex-direction: row;
                gap: 10px;
                justify-content: flex-start;

                #instructions-button {
                    width: 25px;
                    height: 25px;
                    border-radius: 50%;
                    background-color: rgba(221, 232, 235);
                    font-size: 20px;
                    cursor: pointer;
                }

                #home-button {
                    width: 25px;
                    height: 25px;
                    border-radius: 50%;
                    background-color: rgba(221, 232, 235);
                    font-size: 20px;
                    cursor: pointer;

                    img {
                        height: 18px;
                        width: auto;
                    }
                }

                #sound-button {
                    width: 25px;
                    height: 25px;
                    border-radius: 50%;
                    background-color: rgba(221, 232, 235);
                    font-size: 20px;
                    display: flex;
                    justify-content: center;
                    align-items: center;
                    cursor: pointer;

                    img {
                        height: 20px;
                        width: auto;
                    }
                }
            }
        }

        .game-controls {
            position: absolute;
            bottom: 15px;
            left: 0;
            z-index: 10;

            width: 100%;
            height: 40px;

            display: none;

            .game-controls-wrapper {
                height: 40px;
                width: 720px;
                _background-color: blue;
                display: flex;
                flex-direction: row;
                justify-content: space-between;
                padding: 0 16px;

                .panel-wrapper {
                    width: fit-content;
                    height: fit-content;
                    display: flex;
                    flex-direction: row;
                    gap: 24px;

                    button {
                        width: 40px;
                        height: 40px;
                        border-radius: 50%;
                        background-color: rgba(221, 232, 235);
                        font-size: 20px;
                        display: flex;
                        justify-content: center;
                        align-items: center;

                        img {
                            height: 30px;
                            width: auto;
                        }
                    }
                }
            }
        }

        .start-screen {
            position: absolute;
            top: 0;
            left: 0;
            z-index: 20;
            img {
                width: 720px;
                height: 480px;
            }

            #start-button {
                background-color: rgba(221, 232, 235);
                z-index: 20;
                letter-spacing: 1px;
                font-size: 24px;
                height: fit-content;
                width: fit-content;
                padding: 8px 25px;
                border-radius: 30px;
                position: absolute;
                bottom: 20px;
                cursor: pointer;
            }
        }

        .game-over-screen {
            position: absolute;
            top: 0;
            left: 0;
            z-index: 20;

            img {
                width: 720px;
                height: 480px;
            }

            #restart-button {
                background-color: rgba(221, 232, 235);
                z-index: 20;
                letter-spacing: 1px;
                font-size: 24px;
                height: fit-content;
                width: fit-content;
                padding: 8px 25px;
                border-radius: 30px;
                position: absolute;
                bottom: 20px;
                cursor: pointer;
            }
        }

        .win-screen {
            position: absolute;
            top: 0;
            left: 0;
            z-index: 20;

            img {
                width: 720px;
                height: 480px;
                object-fit: contain;
            }

            #restart-button-won {
                background-color: rgba(221, 232, 235);
                z-index: 20;
                letter-spacing: 1px;
                font-size: 24px;
                height: fit-content;
                width: fit-content;
                padding: 8px 25px;
                border-radius: 30px;
                position: absolute;
                bottom: 20px;
                cursor: pointer;
            }
        }
    }

    div {
        display: flex;
        justify-content: center;
        align-items: center;
        flex-direction: column;

        canvas {
            background-color: black;
            display: block;
            width: 720px;
            height: 480px;
        }
    }
}

#dialog {
    height: 300px;
    width: 280px;
    background-color: rgba(221, 232, 235);
    margin: auto;
    border-radius: 30px;
    padding: 20px;

    header {
        display: flex;
        justify-content: space-between;
        align-items: center;
        height: 30px;
        width: 100%;

        h2 {
            font-size: 24px;
            letter-spacing: 1px;
        }

        button {
            cursor: pointer;
            p {
                font-size: 20px;
            }
        }
    }

    .dialog-content {
        padding-top: 10px;
        height: calc(100% - 30px);
        width: 100%;
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        align-items: flex-start;

        p {
            font-family: "Courier New", Courier, monospace;
            font-size: 16px;
            text-align: left;
            line-height: 1;
        }
    }
}

footer {
    height: 70px;
    width: 100%;
    position: absolute;
    bottom: 0;
    display: flex;
    align-items: center;
    justify-content: center;

    .impressum {
        p {
            font-family: "Inter";
            font-weight: 800;
            font-size: 16px;
        }
    }
}

.impressum-info {
    width: fit-content;
    height: fit-content;
    padding: 24px;
    border-radius: 30px;
    background-color: rgba(221, 232, 235);
    display: flex;
    gap: 16px;
    align-items: flex-start;
    p {
        font-family: "Inter";
        font-weight: 800;
        font-size: 16px;
    }
}

/* Smartphones */

@media (pointer: coarse) and (orientation: portrait) {
    header {
        display: none;
    }

    main {
        .rotate-message {
            display: flex;
        }

        .game-container {
            display: none;
        }
    }

    footer {
        display: none;
    }
}

@media (pointer: coarse) and (orientation: landscape) {
    body {
        gap: 0;
    }

    header,
    footer {
        display: none;
    }

    main {
        width: 100vw;
        height: 100dvh;
        padding-top: env(safe-area-inset-top);
        padding-right: env(safe-area-inset-right);
        padding-bottom: env(safe-area-inset-bottom);
        padding-left: env(safe-area-inset-left);

        .rotate-message {
            display: none;
        }

        .game-container {
            width: 100%;
            height: 100%;
            canvas {
                width: 100vw;
                height: 100dvh;
            }

            .mobile-impressum {
                display: flex;
            }

            .game-controls {
                width: 100%;
                display: flex;

                .game-controls-wrapper {
                    width: 100%;
                }
            }

            .start-screen,
            .game-over-screen,
            .win-screen {
                width: 100%;
                height: 100%;

                img {
                    width: 100%;
                    height: 100%;
                }
            }
        }
    }
}

